golden/error/typecheck_missing_struct_parameter.test
-- Note, there is no struct argument to put the query parameters in.
-- @query insert_user()
INSERT INTO users (name, email) VALUES (:name /* :str */, :email /* :str */);


 --> stdin:3:40
  |
3 | INSERT INTO users (name, email) VALUES (:name /* :str */, :email /* :str */);
  |                                         ^~~~~
Error: Cannot create a field, query has no struct parameter.

Hint: Annotated query parameters in the query body become fields of a struct, but this query has no struct parameter in its signature.
